--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,19 +1,1 @@
-@import "tailwindcss";
-@plugin "tailwindcss-primeui";
-
-@custom-variant dark (&:where(.dark, .dark *));
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  color: #3a3a3a;
-  line-height: 1.5;
-}
+/* You can add global styles to this file, and also import other style files */
