--- a/frontend/src/app/pages/routines/calendar-page/calendar-page.component.html
+++ b/frontend/src/app/pages/routines/calendar-page/calendar-page.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center bg-gray-100 min-h-screen pt-6 pb-20">
+<div class="flex flex-col items-center min-h-screen pt-6 pb-20">
   <div class="w-[90%] max-w-md mb-4">
     <p-dropdown
       [options]="filtroOpciones"
