--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,15 @@
-<header class="hidden sm:block"></header>
+@if(showLayoutHeader) {
+<header class="">
+  <app-header></app-header>
+</header>
+}
 <main class="">
   <div class="">
     <router-outlet />
   </div>
 </main>
-<footer class=""></footer>
+@if(showLayoutFooter) {
+
+  <app-footer class=""></app-footer>
+
+}
