--- a/frontend/src/app/shared/footer/footer.component.html
+++ b/frontend/src/app/shared/footer/footer.component.html
@@ -1,13 +1,27 @@
-<div
-  class="fixed bottom-0 left-0 w-full bg-white shadow-md flex justify-around items-center py-6 rounded-t-2xl"
->
-  <button class="flex flex-col items-center text-gray-500 hover:text-black">
-    <i class="pi pi-user text-xl"></i>
-  </button>
-  <button class="flex flex-col items-center text-gray-500 hover:text-black">
-    <i class="pi pi-calendar text-xl"></i>
-  </button>
-  <button class="flex flex-col items-center text-gray-500 hover:text-black">
-    <i class="pi pi-sliders-h text-xl"></i>
-  </button>
-</div>
+<footer>
+  <!-- Footer clásico visible SOLO en pantallas grandes -->
+
+  <div
+    class="hidden lg:block bg-[#9ed2c5] dark:bg-gray-800 text-white text-center p-4"
+  >
+    <p class="text-sm">
+      © 2025 <strong>Nido</strong>. Todos los derechos reservados. Desarrollado
+      por el equipo de Nido.
+    </p>
+  </div>
+  <!-- Footer tipo "app" visible SOLO en pantallas pequeñas y medianas -->
+
+  <div
+    class="flex lg:hidden fixed bottom-0 left-0 w-full bg-white shadow-md justify-around items-center py-6 rounded-t-2xl"
+  >
+    <button class="flex flex-col items-center text-gray-500 hover:text-black">
+      <i class="pi pi-user text-xl"></i>
+    </button>
+    <button class="flex flex-col items-center text-gray-500 hover:text-black">
+      <i class="pi pi-calendar text-xl"></i>
+    </button>
+    <button class="flex flex-col items-center text-gray-500 hover:text-black">
+      <i class="pi pi-sliders-h text-xl"></i>
+    </button>
+  </div>
+</footer>
