--- a/frontend/src/app/pages/others/about-us-page/about-us-page.component.html
+++ b/frontend/src/app/pages/others/about-us-page/about-us-page.component.html
@@ -1,5 +1,5 @@
 <div class="about-container">
-  <div class="about-content">
+  <div class="about-content bg-[#9ed2c5] dark:bg-gray-800 dark:text-white">
     <img
       src="https://img.icons8.com/?size=100&id=41330&format=png&color=FFFFFF"
       alt="Logo de Nido"
@@ -12,21 +12,21 @@
     </p>
 
     <div class="about-sections">
-      <div class="about-card">
+      <div class="about-card text-[#3a3a3a] bg-[#fbf8f0] dark:bg-gray-700 dark:text-white">
         <h2 class="card-title">¿Quiénes somos?</h2>
         <p>
           Somos un equipo multidisciplinar de desarrolladores comprometidos con crear soluciones tecnológicas útiles, accesibles y con impacto real en la vida diaria. Este proyecto forma parte de nuestro Trabajo de Fin de Máster (TFM).
         </p>
       </div>
 
-      <div class="about-card">
+      <div class="about-card text-[#3a3a3a] bg-[#fbf8f0] dark:bg-gray-700 dark:text-white">
         <h2 class="card-title">Nuestra visión</h2>
         <p>
           Ayudar a las familias a gestionar el día a día con herramientas digitales intuitivas que fomenten la conexión, la organización y el bienestar de todos los miembros.
         </p>
       </div>
 
-      <div class="about-card">
+      <div class="about-card text-[#3a3a3a] bg-[#fbf8f0]  dark:bg-gray-700 dark:text-white">
         <h2 class="card-title">Tecnologías usadas</h2>
         <p>
           Angular, Node.js, MongoDB, Express, PrimeNG, Prisma, TailwindCSS y mucho trabajo en equipo.
