--- a/frontend/src/app/pages/profiles/user-profile/user-profile.component.html
+++ b/frontend/src/app/pages/profiles/user-profile/user-profile.component.html
@@ -2,7 +2,7 @@
   <!-- Main -->
   <div class="max-w-md mx-auto p-4 space-y-6">
     <!-- Family Card -->
-    <div class="bg-white rounded-2xl shadow p-6 space-y-6 text-center">
+    <div class="bg-[#9ed2c5] dark:bg-gray-700 rounded-2xl shadow p-6 space-y-6 text-center">
       <!-- User Avatar + Info -->
       <div class="flex justify-center items-center space-x-9">
         <!-- Avatar -->
@@ -16,17 +16,17 @@
 
         <!-- User info -->
         <div class="leading-tight text-left">
-          <p class="text-base font-semibold text-gray-900">
+          <p class="text-base font-semibold text-gray-900 dark:text-white">
             {{ user.nick }}
             
           </p>
           @if (user.name && user.surname) {
-          <p class="text-sm text-gray-500">
+          <p class="text-sm text-gray-500 dark:text-gray-400">
             {{ user.name }} {{ user.surname }}
             
           </p>
           }
-          <p class="text-sm text-gray-500">
+          <p class="text-sm text-gray-500 dark:text-gray-400">
             {{ user.rol }}
           </p>
         </div>
@@ -37,8 +37,8 @@
         @for (child of children; track child) {
         <button
           (click)="selectChild(child)"
-          [class.bg-pink-100]="child === selectedChild"
-          [class.text-pink-700]="child === selectedChild"
+          [class.bg-orange-100]="child === selectedChild"
+          [class.text-orange-700]="child === selectedChild"
           [class.bg-gray-200]="child !== selectedChild"
           class="rounded-full w-16 h-16 flex items-center justify-center hover:cursor-pointer transition-colors duration-200"
         >
@@ -57,18 +57,18 @@
 
     <!-- Selected Child Card -->
     @if (selectedChild) {
-    <div class="bg-white rounded-2xl shadow">
+    <div class="bg-[#9ed2c5] dark:bg-gray-700 rounded-2xl shadow">
       <div class="p-4">
-        <h2 class="text-lg font-semibold text-gray-900 mb-4 ml-2">
+        <h2 class="text-lg font-semibold text-gray-900 dark:text-white mb-4 ml-2">
           {{ selectedChild.name }}
         </h2>
         <div class="mt-3 flex items-center justify-between ml-2 mr-2">
-          <p class="text-sm font-medium text-gray-900">
+          <p class="text-sm font-medium text-gray-900 dark:text-white">
             {{ selectedChild.age }}
           </p>
           <button  (click)="router.navigate(['/child-profile/{{selectedChild.id}}'])"
           class="hover:cursor-pointer">
-            <i class="pi pi-search text-gray-600 text-sm"></i>
+            <i class="pi pi-search text-gray-600 dark:text-white text-sm"></i>
           </button>
         </div>
 
@@ -79,15 +79,15 @@
             class="w-full rounded-xl object-cover"
           />
         </div>
-        <div class="mt-3 flex items-center justify-between ml-2 mr-2">
+        <div class="mt-3 flex items-center dark:text-white justify-between ml-2 mr-2">
           <p><strong>Altura:</strong> {{ selectedChild.height }} cm</p>
           <p><strong>Peso:</strong> {{ selectedChild.weight }} kg</p>
         </div>
       </div>
     </div>
     }
-    <div class="bg-white rounded-2xl shadow p-6 space-y-6 text-center">
-    <h2 class="text-lg font-semibold text-center text-gray-900 mb-2">
+    <div class="bg-[#9ed2c5] dark:bg-gray-700 rounded-2xl shadow p-6 space-y-6 text-center">
+    <h2 class="text-lg font-semibold text-center text-gray-900 dark:text-white mb-2">
       INTEGRANTES DE LA FAMILIA
     </h2>
     @for (member of familyMembers; track member) {
