calendar page theme upgrade

--- a/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
+++ b/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
@@ -51,7 +51,7 @@
   transform: translateX(-50%);
   width: 4px;
   height: 4px;
-  background-color: red;
+  background-color: #ff7f50;
   border-radius: 50%;
   z-index: 9999;
 }
