--- a/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
+++ b/frontend/src/app/pages/routines/calendar-page/calendar-page.component.css
@@ -62,6 +62,11 @@
   display: none !important;
 }
 
+html.dark .fc-col-header {
+  background-color: oklch(27.8% 0.033 256.848);
+
+}
+
 
 /* Estilo botones calendario */
 html:not(.dark) .fc .fc-button {
