user-profile responsive + themed + added chilf and family forms + others fixes

--- a/frontend/src/app/pages/routines/calendar-page/calendar-page.component.html
+++ b/frontend/src/app/pages/routines/calendar-page/calendar-page.component.html
@@ -5,7 +5,7 @@
       [options]="filtroOpciones"
       [(ngModel)]="filtroSeleccionado"
       optionLabel="label"
-      placeholder="Filtrar por niño o actividad"
+      placeholder="Filtrar por niño"
       class="w-full"
       (onChange)="filtrarEventos()"
     ></p-dropdown>
