--- a/frontend/src/app/pages/profiles/settings/settings-profile.component.html
+++ b/frontend/src/app/pages/profiles/settings/settings-profile.component.html
@@ -10,7 +10,7 @@
 
       @for (item of settingsItems; track item; let idx = $index) {
         <div
-          class="flex items-center justify-between py-4  cursor-pointer   hover:bg-gray-50 -mx-2 px-2 rounded-md transition-colors "
+          class="flex items-center justify-between py-4  cursor-pointer  -mx-2 px-2 rounded-md transition-colors "
           (click)="!item.hasToggle && item.onClick?.()"
         >
           <div class="flex items-center space-x-3">
