--- a/frontend/src/app/pages/auth/register-page/register-page.component.html
+++ b/frontend/src/app/pages/auth/register-page/register-page.component.html
@@ -2,7 +2,8 @@
   <div class="register-content">
     <h1 class="page-title">Regístrate</h1>
 
-    <div class="profile-picture-section">
+    <!-- OPCIONAL: Añadir foto de perfil -->
+    <!-- <div class="profile-picture-section">
       <input
         type="file"
         #fileInput
@@ -23,7 +24,7 @@
         />
         }
       </div>
-    </div>
+    </div> -->
 
     <form
       [formGroup]="registerForm"
