--- a/frontend/src/app/pages/routines/calendar-page/calendar-page.component.html
+++ b/frontend/src/app/pages/routines/calendar-page/calendar-page.component.html
@@ -1,14 +1,14 @@
 <div class="flex flex-col items-center min-h-screen pt-6 pb-20">
   <div class="flex w-[90%] max-w-md mb-4 gap-2 items-center">
-    <!-- Dropdown -->
-    <p-dropdown
+    <!-- Select -->
+    <p-select
       [options]="filtroOpciones"
       [(ngModel)]="filtroSeleccionado"
       optionLabel="label"
       placeholder="Filtrar por niño"
       class="w-full"
       (onChange)="filtrarEventos()"
-    ></p-dropdown>
+    ></p-select>
 
     <!-- Botones -->
     <button
