--- a/frontend/src/app/components/family/family-form/family-form.component.html
+++ b/frontend/src/app/components/family/family-form/family-form.component.html
@@ -1,6 +1,6 @@
 <div class="fixed inset-0 backdrop-blur-xs flex items-center justify-center z-50">
   <div class="bg-white dark:bg-gray-700 rounded-2xl shadow-lg w-[90%] max-w-md max-h-[90vh] flex flex-col p-6 overflow-hidden">
-    <h2 class="text-xl font-semibold text-gray-800 mb-4 shrink-0">Agregar familiar</h2>
+    <h2 class="text-xl font-semibold text-gray-800 dark:text-white mb-4 shrink-0">Agregar familiar</h2>
 
     <form
       [formGroup]="form"
