--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -18,7 +18,7 @@
     <button
       pButton
       (click)="toggleDarkMode()"
-      class="bg-[#ff7f50] dark:bg-gray-700 dark:text-white px-4 py-2 rounded"
+      class="bg-[#ff7f50] dark:bg-gray-700 text-white px-4 py-2 rounded"
     >
       @if (isDarkMode()) { 🌙 Modo oscuro } @else { ☀️ Modo claro }
     </button>
