--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -24,6 +24,13 @@
 }
 
 body {
-  color: #3a3a3a;
   line-height: 1.5;
+}
+
+.card {
+  @apply dark:bg-[##9ed2c5] shadow-md bg-[#4e8778] p-6 rounded-lg text-white dark:text-gray-700; 
+}
+
+label {
+  @apply font-medium text-sm;
 }
